# openMP

./: CMakeLists.txt  Vector.cpp  Vector.h  VectorHor.cpp  VectorHor.h  VectorVert.cpp  VectorVert.h  factory.h  factoryHor.h  factoryVert.h  in.txt  main.cpp  test.cpp  test.h
